crates/math-core/tests/snapshots/error_test__mismatched_begin_end.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{matrix} 1 \\end{bmatrix}"
---
Error: Expected "\end{matrix}", but found "\end{bmatrix}".
   ╭─[ <input>:1:18 ]
   │
 1 │ \begin{matrix} 1 \end{bmatrix}
   │                  ──────┬──────  
   │                        ╰──────── expected a different environment name here
───╯
